# retailcrm-fastapi-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  main.py
app/api/: __init__.py  customers.py  orders.py
app/core/: config.py
app/schemas/: customers.py  orders.py
app/services/: retailcrm.py
