[project]
name = "retailcrm-fastapi-service"
version = "0.1.0"
description = ""
authors = [
    {name = "AlehShavel",email = "aleh3565@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
